; ModuleID = '/home/carl/AnghaBench/mpv/sub/extr_sd_ass.c_append.c'
source_filename = "/home/carl/AnghaBench/mpv/sub/extr_sd_ass.c_append.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buf = type { i64, i64, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.buf*, i8)* @append to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @append(%struct.buf* %0, i8 signext %1) #0 {
  %3 = alloca %struct.buf*, align 8
  %4 = alloca i8, align 1
  store %struct.buf* %0, %struct.buf** %3, align 8
  store i8 %1, i8* %4, align 1
  %5 = load %struct.buf*, %struct.buf** %3, align 8
  %6 = getelementptr inbounds %struct.buf, %struct.buf* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.buf*, %struct.buf** %3, align 8
  %9 = getelementptr inbounds %struct.buf, %struct.buf* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = icmp ult i64 %7, %10
  br i1 %11, label %12, label %25

12:                                               ; preds = %2
  %13 = load i8, i8* %4, align 1
  %14 = load %struct.buf*, %struct.buf** %3, align 8
  %15 = getelementptr inbounds %struct.buf, %struct.buf* %14, i32 0, i32 2
  %16 = load i8*, i8** %15, align 8
  %17 = load %struct.buf*, %struct.buf** %3, align 8
  %18 = getelementptr inbounds %struct.buf, %struct.buf* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = getelementptr inbounds i8, i8* %16, i64 %19
  store i8 %13, i8* %20, align 1
  %21 = load %struct.buf*, %struct.buf** %3, align 8
  %22 = getelementptr inbounds %struct.buf, %struct.buf* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = add i64 %23, 1
  store i64 %24, i64* %22, align 8
  br label %25

25:                                               ; preds = %12, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
